# core

./: .gitignore  Cargo.toml  LICENSE  README.md
res/xml/: data_graph.xml  data_graph_generated.xml  data_pack.xml  data_vertex.xml
res/xsd/: data.xsd  data_graph_v1.xsd
src/: lib.rs
src/cli/: logo.rs  mod.rs
src/command/: hello.rs  main_key_id.rs  mod.rs
src/hde/: data_structure.rs  load_data.rs  mod.rs  save_data.rs  xmlschema.rs
src/key_chain/: id.rs
