[package]
name = "hoenir-core"
version = "0.1.19"
edition = "2021"
authors = ["G0los <golos@hoenir.space>"]
categories = ["network-programming", "data-structures", "command-line-utilities", "web-programming"]
description = "Hœnir for handling the corresponding exchange of data using Rust."
keywords = ["network", "data", "cli", "web"]
license-file = "LICENSE"
repository = "https://github.com/hoenir-space/core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
colored = "2.1.0"
console = "0.15.8"
rust-argon2 = "2.1.0"
thousands = "0.2.0"
uuid = {version = "1.9.1", features = ["v3","v4","fast-rng","macro-diagnostics"] }
yaserde = {version = "0.10.1", features = ["yaserde_derive"] }
